src/test/ui/proc-macro/issue-37788.stderr
error[E0308]: mismatched types
  --> $DIR/issue-37788.rs:8:5
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     // Test that constructing the `visible_parent_map` (in `cstore_impl.rs`) does not ICE.
LL |     std::cell::Cell::new(0)
   |     ^^^^^^^^^^^^^^^^^^^^^^^- help: try adding a semicolon: `;`
   |     |
   |     expected (), found struct `std::cell::Cell`
   |
   = note: expected type `()`
              found type `std::cell::Cell<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
